syntax = "proto3";
package teaclave_common_proto;

message UserCredential {
  string id = 1;
  string token = 2;
}

message FileCryptoInfo {
  string schema = 1;
  bytes key = 2;
  bytes iv = 3;
}

message TaskOutputs {
  bytes return_value = 1;
  map<string, string> output_file_hash = 2;
}

message TaskFailure {
  string reason = 1;
}

enum TaskStatus {
  Created = 0;
  DataAssigned = 1;
  Approved = 2;
  Staged = 3;
  DataPreparing = 4;
  Running = 5;
  Finished = 6;
}
